more spacing fixes

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,7 +14,8 @@
   padding: 0 64px 0 64px;
   width: 100%;
   z-index: 2;
-  height: 100vh;
+  height: calc(100vh - 90px);
+  margin-top: 90px;
 }
 
 .bg {
